--- a/omron-sensor-api/package.json
+++ b/omron-sensor-api/package.json
@@ -4,10 +4,14 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.8.2",
-    "hono": "^4.1.2"
+    "@prisma/client": "5.11.0",
+    "hono": "^4.1.2",
+    "mysql2": "^3.9.2"
   },
   "devDependencies": {
+    "@types/mysql": "^2.15.26",
     "@types/node": "^20.11.17",
+    "prisma": "5.11.0",
     "tsx": "^3.12.2"
   }
 }
