--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,9 @@ services:
       source: ./omron-sensor-api   # マウント元
       target: /app   # マウントされるコンテナのパス
     - /app/node_modules # node_modulesをマウントしない
+    - type: bind
+      source: ./.env
+      target: /app/.env
     tty: true   # コンテナを起動させ続ける。
     command: sh -c "yarn install && yarn run dev"   # コンテナ起動時に実行するコマンド
 
